@@ -34,10 +34,10 @@ function(add_python_test _NAME _PYSCRIPT)
 
 endfunction(add_python_test)
 
-add_python_test(nbins_test                    nbins_test.py)
-add_python_test(ndhist_basic_slicing_test     ndhist_basic_slicing_test.py)
-add_python_test(ndhist_deepcopy_method_test   ndhist_deepcopy_method_test.py)
-add_python_test(ndhist_rebin_axis_method_test ndhist_rebin_axis_method_test.py)
-add_python_test(oor_bin_copies_test           oor_bin_copies_test.py)
-add_python_test(project_method_test           project_method_test.py)
-add_python_test(tuple_fill_test               tuple_fill_test.py)
+add_python_test(nbins_test                         nbins_test.py)
+add_python_test(ndhist_basic_slicing_test          ndhist_basic_slicing_test.py)
+add_python_test(ndhist_deepcopy_method_test        ndhist_deepcopy_method_test.py)
+add_python_test(ndhist_merge_axis_bins_method_test ndhist_merge_axis_bins_method_test.py)
+add_python_test(oor_bin_copies_test                oor_bin_copies_test.py)
+add_python_test(project_method_test                project_method_test.py)
+add_python_test(tuple_fill_test                    tuple_fill_test.py)
